--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="PostsAdmin" asp-action="Index" title="Manage">Post</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/PostUser/Index">Post2</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
