--- a/Views/PostsAdmin/Delete.cshtml
+++ b/Views/PostsAdmin/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 <h1>Delete</h1>
@@ -24,10 +25,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserInfo)
+            @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserInfo.Id)
+            @Html.DisplayFor(model => model.User.Id)
         </dd>
     </dl>
     
