--- a/Views/PostsAdmin/Index.cshtml
+++ b/Views/PostsAdmin/Index.cshtml
@@ -2,13 +2,21 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="PostsAdmin" asp-action="Create">Create New</a>
+    <a asp-controller="PostsAdmin" asp-action="Create">Create New</a>
+    <a class="nav-link text-dark" asp-controller="PostsAdmin" asp-action="Create">Create</a>
 </p>
+<ul class="navbar-nav flex-grow-1">
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-controller="PostsAdmin" asp-action="Create" title="Create">Create</a>
+    </li>
+</ul>
 <table class="table">
     <thead>
         <tr>
@@ -19,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserInfo)
+                @Html.DisplayNameFor(model => model.User)
             </th>
             <th></th>
         </tr>
@@ -34,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserInfo.Id)
+                @Html.DisplayFor(modelItem => item.User.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
